--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-modal": "^3.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-timer-hook": "^3.0.3",
     "typescript": "^4.2.4",
     "web-vitals": "^1.1.2"
   },
